--- a/index.htm
+++ b/index.htm
@@ -5,17 +5,17 @@
 </head>
 
 <body>
+    <img src="taqtile.png" alt="Logo da Taqtile">
     <h1 style="color: red">Isso aqui é o meu título</h1>
-    <p style="color: #b2b2b2">Isso aqui é o meu parágrafo <br> e eu vou pular esse primeiro parágrafo com BR</p>
+    <p style="color: #b2b2b2; font-size: 24px;">Isso aqui é o meu parágrafo <br> e eu vou pular esse primeiro parágrafo com BR e <b>deixar essa parte negrita</b></p>
     <h2>Agora eu tenho uma sessão 2</h2>
-    <p title="SURPRISE">Um paragráfo dentro do Heading 2</p>
+    <p title="SURPRISE">Um paragráfo dentro do Heading 2 <mark>Isso está</mark> </p>
     <h3>Agora tenho uma sessão 3</h3>
     <a href="https://www.w3schools.com/html/html_basic.asp">Clique aqui e vá aprender HTML</a>
     <button>Agora clique aqui e vá a merda!</button>
-    <img src="taqtile.png" alt="Logo da Taqtile">
-
+    <p>Isso aqui é <sup>sobreescrito</sup> esse é <sub>subescrito</sub> esse é <del>cortado</del> esse é com <em>enfase/itálico</em></p>
     <ul>
-        <li>Lista não ordenada por UL</li>
+        <li>Lista não ordenada por <b>UL</b></li>
         <li>outro item não ordenado</li>
     </ul>
     <ol>
