--- a/index.htm
+++ b/index.htm
@@ -14,6 +14,7 @@
     <a href="https://www.w3schools.com/html/html_basic.asp">Clique aqui e vá aprender HTML</a>
     <button>Agora clique aqui e vá a merda!</button>
     <p>Isso aqui é <sup>sobreescrito</sup> esse é <sub>subescrito</sub> esse é <del>cortado</del> esse é com <em>enfase/itálico</em></p>
+    <q>Isso é um quotation</q>
     <ul>
         <li>Lista não ordenada por <b>UL</b></li>
         <li>outro item não ordenado</li>
