--- a/index.htm
+++ b/index.htm
@@ -17,7 +17,7 @@
     <q>Isso é um quotation</q>
     <ul>
         <li>Lista não ordenada por <b>UL</b></li>
-        <li>yugo seu arrombado</li>
+        <li>yugo seu arrombado não sem nada</li>
     </ul>
     <ol>
         <li>Lista ordenada por OL significa número</li>
