--- a/index.htm
+++ b/index.htm
@@ -20,7 +20,9 @@
     </ul>
     <ol>
         <li>Lista ordenada por OL significa número</li>
+
         <li>Pega essa</li>
+        <li>pica</li>
     </ol>
 </body>
 
