Second Page Added

--- a/index.htm
+++ b/index.htm
@@ -12,6 +12,7 @@
     <h2>Agora eu tenho uma sessão 2</h2>
     <p class="body">Um paragráfo dentro do Heading 2 <mark>Isso está</mark> </p>
     <p class="body2">Um parágrafo com peso menor</p>
+    <a href="secondPage.htm">Clique para página 2</a>
 </body>
 
 </html>
