--- a/secondPage.htm
+++ b/secondPage.htm
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Esse é o título da segunda página</h1>
+    <p>Estou fazendo rebase para testar na branch separada</p>
 </body>
 </html>
