Image Map Added

--- a/index.htm
+++ b/index.htm
@@ -6,13 +6,18 @@
 </head>
 
 <body>
-    <img src="Imagens/Taqtile_logo.png" alt="Logo da Taqtile">
+    <img src="Imagens/Taqtile_logo.png" alt="Logo da Taqtile" style="float: right;">
     <h1>Isso aqui é o meu título</h1>
     <p class="body">Isso aqui é o meu parágrafo <br> e eu vou pular esse primeiro parágrafo com BR e <b>deixar essa parte negrita</b></p>
     <h2>Agora eu tenho uma sessão 2</h2>
     <p class="body">Um paragráfo dentro do Heading 2 <mark>Isso está</mark> </p>
     <p class="body2">Um parágrafo com peso menor</p>
     <a href="secondPage.htm">Clique para página 2</a>
+    <br>
+    <img src="Imagens/Desk.jpg" alt="Mesa de Trabalho" usemap="#desk">
+    <map name="desk">
+        <area shape="poly" coords="436, 120, 849, 42, 954, 559, 534, 640" href="https://www.w3schools.com/html/html_images_imagemap.asp" alt="">
+    </map>
 </body>
 
 </html>
